# vnc_mjpeg_server

./: CMakeLists.txt  jpegset.h  jpgfb.c  mjpeg-server.c  readme.md
cmake/: FindAML.cmake  FindNeatVNC.cmake  FindPixman.cmake
